--- a/gen.html
+++ b/gen.html
@@ -15,19 +15,19 @@
            Word-wrap: break-word; / Internet Explorer 5.5+ */
         }
     </style>
+
     <script type="text/javascript" src="vue2.7.js"></script>
     <link href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="model.js"></script>
-
+    <script type="module" src="font-han-sans.js?v=1.1"></script>
     <script src="jspdf.min.js"></script>
-    <script type="module" src="font-han-sans.js"></script>
 
 </head>
 
 <body>
 <div id="app">
-    <div class="container-fluid p-5 bg-white text-black text-center">
+    <div class="container-fluid p-5 bg-light text-black text-center">
         <h1>施工组织设计生成</h1>
         <div class="row text-center" style="margin-top: 28px">
             <div class="input-group mb-2" style="width: 50%">
@@ -54,13 +54,13 @@
         <div class="row" style="padding-top: 55px;text-align: left">
             <div class="col">
                 <h4 style="height: 48px">选择模版</h4>
-                <div class="card  border-info"
+                <div class="card border-info bg-light"
                      style="margin-top: 25px;border-radius:25px;padding: 1.5% 3% 1.5% 3%">
                     <ul class="list-group" style="list-style: none;margin-top:0;padding:0%;">
                         <li v-for="obj in models"
                             style="margin-top: 1.5%;margin-bottom: 1.5%;padding:0">
                             <div class="card"
-                                 style="border-radius:25px;padding: 16px;background: ghostwhite">
+                                 style="border-radius:25px;padding: 16px;background: white">
                                 <div style="display: flex;flex-direction: row" v-if="obj">
                                     <div style="display: flex;flex-direction: column;width: 84%">
                                         <span style="font-size: 22px;color:black;font-weight: 400;line-height: 23px;">
@@ -92,17 +92,14 @@
             <div class="col">
                 <div style="display: flex;flex-direction: row;height: 48px">
                     <h4 style="">结果预览</h4>
-                    <button type="button" class="btn btn-success" style="margin-left: 100px;margin-bottom: 8px"
+                    <button id="export_pdf" disabled="disabled" type="button" class="btn btn-success"
+                            style="margin-left: 100px;margin-bottom: 8px"
                             @click="genPDF"
-                            v-if="retLi.length>0">
-                        导出PDF
-                    </button>
-                    <button type="button" class="btn btn-success" style="margin-left: 100px;margin-bottom: 8px;"
-                            v-if="retLi.length>0">
-                        导出word
+                            v-if="retLi.length>0">PDF资源加载中...
                     </button>
                 </div>
-                <div id="resultLi" class="card bg-light" style="margin-top: 25px;border-radius:25px;padding:16px;"
+                <div id="resultLi" class="card"
+                     style="background-color:white;margin-top: 25px;border-radius:25px;padding:16px;"
                      v-if="retLi.length>0">
                     <ul style="list-style: none;margin-top:0;padding-top:0;">
                         <li v-for="(obj,i) in retLi" style="padding-top: 16px;padding-bottom: 16px">
@@ -201,6 +198,10 @@
                         cursorY += 10 + 2; // 递增 Y 坐标位置
                     }
                 })
+                var result = app.genFileName()
+                doc.save(result + ".pdf");
+            },
+            genFileName: function () {
                 var date = new Date()
                 console.log(date)
                 var year = date.getFullYear()//获取年
@@ -215,8 +216,8 @@
                 minutes = minutes > 9 ? minutes : "0" + minutes
                 // seconds = seconds > 9 ? seconds : "0" + seconds//数据不大于9时在数据前方拼接一个“0”
                 var result = "施组_" + year + month + day + "_" + hours + minutes
-                doc.save(result+".pdf");
-            }
+                return result
+            },
         },
     })
     // const objArr = JSON.parse(localStorage.getItem('models'));
@@ -228,6 +229,18 @@
     const ten = "十"
     const end = "章  "
 
+
+    //加载状态为complete时移除loading效果
+    function completeLoading() {
+        if (document.readyState == "complete") {
+            var btn = document.getElementById('export_pdf')
+            btn.disabled = false
+            btn.innerHTML = "导出PDF"
+        }
+    }
+
+    //监听加载状态改变
+    document.onreadystatechange = completeLoading;
 </script>
 
 
@@ -256,16 +269,6 @@
             await sleep(1000);
         }
     });
-
-    function genWord() {
-// 使用 WordCloud 库生成随机 WordCloud
-        const wordCloud = new WordCloud('https://cdn.jsdelivr.net/npm/wordcloudjs@3.2.1/dist/wordcloud.min.css');
-// 将 WordCloud 添加到 HTML 元素中
-        const element = document.createElement('div');
-        element.innerHTML = '<div class="wordcloud">' + wordCloud.generate + '</div>';
-        document.body.appendChild(element);
-
-    }
 
 </script>
 </body>
