--- a/config.html
+++ b/config.html
@@ -5,6 +5,7 @@
     <title>配置模版</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Cache-Control" content="only-if-cached">
     <style>
         pre {
             white-space: pre-wrap;
