--- a/config.html
+++ b/config.html
@@ -229,7 +229,8 @@
         } else {
             let obj = {
                 title: inputName,
-                contents: contentLi
+                contents: contentLi,
+                selected: 0,
             }
             app.models.push(obj)
         }
