--- a/config.html
+++ b/config.html
@@ -245,7 +245,7 @@
         localStorage.setItem('models', JSON.stringify(app.models));
         alert("保存成功")
         var s = localStorage.getItem('models')
-        console.log("saved data:" + s)
+        console.log("var configModels = " + s + ";")
         // refreshCache()
     }
 
